bdr.BDR2.scala.error
Erreur de compilation :
BDR2:15: error: ')' expected but '}' found.
} 
^